welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:17: error: not found: value isFacingrail
	if (!isFacingrail && estFaceMur) {
             ^